fix: Use large runners.

--- a/.github/workflows/d2iq-release-tag-version.yml
+++ b/.github/workflows/d2iq-release-tag-version.yml
@@ -18,7 +18,7 @@ jobs:
   docker-rootless:
     runs-on: 
       - self-hosted
-      - small
+      - large
     permissions:
         contents: read
         packages: write
