--- a/.github/workflows/d2iq-release-tag-version.yml
+++ b/.github/workflows/d2iq-release-tag-version.yml
@@ -12,13 +12,16 @@ on:
         description: 'Release Image Name'
         type: string
         required: true
-        default: 'docker.io/mesosphere/gitea:latest'
+        default: 'ghcr.io/mesosphere/gitea:latest'
 
 jobs:
   docker-rootless:
     runs-on: 
       - self-hosted
-      - small
+      - large
+    permissions:
+        contents: read
+        packages: write
     steps:
       - uses: actions/checkout@v4
         with:
@@ -29,8 +32,9 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_READ_WRITE_USERNAME }}
-          password: ${{ secrets.DOCKER_READ_WRITE_PASSWORD }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: build rootless docker image
         uses: docker/build-push-action@v5
         with:
